--- a/style.css
+++ b/style.css
@@ -11,39 +11,47 @@
     width: 100%;
     height: auto;
 }
-
-.Section1 {
-    width: 100%;
+body {
     margin: 0;
-    padding: 0 0px;
-    justify-content: center;
-    background-color: blue;
-    text-align: center;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
 }
 
-.Section2 {
-    width: 100%;
-    margin: 0;
-    padding: 0 0px;
+.section {
+    padding: 60px 20px;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    background-color: green;
-    text-align: center;
 }
 
-.Section3 {
-    width: 100%;
-    margin: 0;
-    padding: 0 0px;
-    justify-content: center;
-    background-color: yellow;
-    text-align: center;
+.content {
+    max-width: 800px;
+    margin: 0 auto;
+    color: white;
 }
 
-.Section4 {
-    width: 100%;
-    margin: 0;
-    padding: 0 0px;
-    justify-content: center;
-    background-color: red;
-    text-align: center;
+.section-1 {
+    background-color: #2c3e50;
+}
+
+.section-2 {
+    background-color: #ffcd94;
+}
+
+.section-3 {
+    background-color: #2c3e50;
+}
+
+.section-4 {
+    background-color: #ffcd94;
+}
+
+h2 {
+    margin-top: 0;
+    font-size: 2rem;
+}
+
+p {
+    font-size: 1.1rem;
 }
