--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Colors */
 :root {
-    --p-blue: #1a2a5e;
+    --p-blue: #1a2a5e;  /* #1a2a5e; */
     --p-green: #053225;
     --teal: #48A9A6;
     --red: #A72608;
@@ -11,18 +11,19 @@
 
 /* Video Header */
 .video-container {
+    position: fixed; /* Makes video stay in place */
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     object-fit: cover;
-    position: relative;
     z-index: 1;
-    background-color: var(--p-blue);
 }
-
 
 .headline-container {
     position: relative;
-    margin-top: -100px;
+    margin-top: -50px;
+    margin-bottom: -80px;
     z-index: 2;
     background-color: var(--Beige);
     padding: 20px;
@@ -47,6 +48,12 @@
 } */
 
 /* Body */
+.content-wrapper {
+    position: relative;
+    z-index: 2;
+    padding-top: 80vh; /* Space for video to be visible initially */
+}
+
 body {
     margin: 0;
     font-family:poppins;
@@ -73,13 +80,13 @@ h2 {
 }
 
 .content {
-    max-width: 1200px;
+    max-width: 600px;
     margin: 0 auto;
     color: white;
-    display: flex;
-    align-items: center;
+    flex-direction: column;
     gap: 40px;
 }
+
 
 @font-face {
     font-family: 'Chalk';
@@ -112,26 +119,34 @@ p {
 }
 .text-content {
     flex: 1;
+    text-align: center;
 }
 
 
 /* Images */
-.content.image-right {
+/* .content.image-right {
     flex-direction: row;
 }
 
 .content.image-left {
     flex-direction: row-reverse;
-}
+} */
 
 .image-container {
-    flex: 1;
-    height: 400px;
-    overflow: hidden;
-}
+    margin: 30px 0;
+    text-align: center;
+  }
+  
+  .image-container img {
+    max-width: 100%;
+    height: 50vh;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
 
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.image-caption {
+    font-style: italic;
+    text-align: center;
+    margin-top: 10px;
+    opacity: 0.8;
+    font-size: 0.9rem;
 }
